added config parsers

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -1,140 +1,140 @@
 ---
 grails:
-    profile: web
-    codegen:
-        defaultPackage: ossim.demo
-    gorm:
-        reactor:
-            # Whether to translate GORM events into Reactor events
-            # Disabled by default for performance reasons
-            events: false
+  profile: web
+  codegen:
+    defaultPackage: ossim.demo
+  gorm:
+    reactor:
+      # Whether to translate GORM events into Reactor events
+      # Disabled by default for performance reasons
+      events: false
 info:
-    app:
-        name: '@info.app.name@'
-        version: '@info.app.version@'
-        grailsVersion: '@info.app.grailsVersion@'
+  app:
+    name: '@info.app.name@'
+    version: '@info.app.version@'
+    grailsVersion: '@info.app.grailsVersion@'
 spring:
-    jmx:
-        unique-names: true
-    main:
-        banner-mode: "off"
-    groovy:
-        template:
-            check-template-location: false
-    devtools:
-        restart:
-            additional-exclude:
-                - '*.gsp'
-                - '**/*.gsp'
-                - '*.gson'
-                - '**/*.gson'
-                - 'logback.groovy'
-                - '*.properties'
+  jmx:
+    unique-names: true
+  main:
+    banner-mode: "off"
+  groovy:
+    template:
+      check-template-location: false
+  devtools:
+    restart:
+      additional-exclude:
+      - '*.gsp'
+      - '**/*.gsp'
+      - '*.gson'
+      - '**/*.gson'
+      - 'logback.groovy'
+      - '*.properties'
 management:
-    endpoints:
-        enabled-by-default: false
+  endpoints:
+    enabled-by-default: false
 
 ---
 grails:
-    mime:
-        disable:
-            accept:
-                header:
-                    userAgents:
-                        - Gecko
-                        - WebKit
-                        - Presto
-                        - Trident
-        types:
-            all: '*/*'
-            atom: application/atom+xml
-            css: text/css
-            csv: text/csv
-            form: application/x-www-form-urlencoded
-            html:
-              - text/html
-              - application/xhtml+xml
-            js: text/javascript
-            json:
-              - application/json
-              - text/json
-            multipartForm: multipart/form-data
-            pdf: application/pdf
-            rss: application/rss+xml
-            text: text/plain
-            hal:
-              - application/hal+json
-              - application/hal+xml
-            xml:
-              - text/xml
-              - application/xml
-    urlmapping:
-        cache:
-            maxsize: 1000
-    controllers:
-        defaultScope: singleton
-    converters:
-        encoding: UTF-8
-    views:
-        default:
-            codec: html
-        gsp:
-            encoding: UTF-8
-            htmlcodec: xml
-            codecs:
-                expression: html
-                scriptlet: html
-                taglib: none
-                staticparts: none
+  mime:
+    disable:
+      accept:
+        header:
+          userAgents:
+          - Gecko
+          - WebKit
+          - Presto
+          - Trident
+    types:
+      all: '*/*'
+      atom: application/atom+xml
+      css: text/css
+      csv: text/csv
+      form: application/x-www-form-urlencoded
+      html:
+      - text/html
+      - application/xhtml+xml
+      js: text/javascript
+      json:
+      - application/json
+      - text/json
+      multipartForm: multipart/form-data
+      pdf: application/pdf
+      rss: application/rss+xml
+      text: text/plain
+      hal:
+      - application/hal+json
+      - application/hal+xml
+      xml:
+      - text/xml
+      - application/xml
+  urlmapping:
+    cache:
+      maxsize: 1000
+  controllers:
+    defaultScope: singleton
+  converters:
+    encoding: UTF-8
+  views:
+    default:
+      codec: html
+    gsp:
+      encoding: UTF-8
+      htmlcodec: xml
+      codecs:
+        expression: html
+        scriptlet: html
+        taglib: none
+        staticparts: none
 management:
-    endpoints:
-        jmx:
-            unique-names: true
+  endpoints:
+    jmx:
+      unique-names: true
 
 ---
 hibernate:
-    cache:
-        queries: false
-        use_second_level_cache: false
-        use_query_cache: false
+  cache:
+    queries: false
+    use_second_level_cache: false
+    use_query_cache: false
 dataSource:
-    pooled: true
-    jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
+  pooled: true
+  jmxExport: true
+  driverClassName: org.h2.Driver
+  username: sa
+  password: ''
 
 environments:
-    development:
-        dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    test:
-        dataSource:
-            dbCreate: update
-            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    production:
-        dataSource:
-            dbCreate: none
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-            properties:
-                jmxEnabled: true
-                initialSize: 5
-                maxActive: 50
-                minIdle: 5
-                maxIdle: 25
-                maxWait: 10000
-                maxAge: 600000
-                timeBetweenEvictionRunsMillis: 5000
-                minEvictableIdleTimeMillis: 60000
-                validationQuery: SELECT 1
-                validationQueryTimeout: 3
-                validationInterval: 15000
-                testOnBorrow: true
-                testWhileIdle: true
-                testOnReturn: false
-                jdbcInterceptors: ConnectionState
-                defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+  development:
+    dataSource:
+      dbCreate: create-drop
+      url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+  test:
+    dataSource:
+      dbCreate: update
+      url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+  production:
+    dataSource:
+      dbCreate: none
+      url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      properties:
+        jmxEnabled: true
+        initialSize: 5
+        maxActive: 50
+        minIdle: 5
+        maxIdle: 25
+        maxWait: 10000
+        maxAge: 600000
+        timeBetweenEvictionRunsMillis: 5000
+        minEvictableIdleTimeMillis: 60000
+        validationQuery: SELECT 1
+        validationQueryTimeout: 3
+        validationInterval: 15000
+        testOnBorrow: true
+        testWhileIdle: true
+        testOnReturn: false
+        jdbcInterceptors: ConnectionState
+        defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
 ---
 #grails:
 #    assets:
@@ -143,3 +143,75 @@ environments:
 #            processor: 'direct'
 #            processJsFiles: false
 #            options: {blacklist: ['useStrict'], loose: 'all'}
+
+psm-view-params:
+  bbox:
+    minX: 147.166269578023
+    minY: -42.9405015289975
+    maxX: 147.352799864668
+    maxY: -42.7825465458196
+  overlays:
+  - filename:
+    - '/System/Volumes/Data/ossim/psm-test/5V090205M0001912264B220000100072M_001508507.ntf'
+    title: 'Color'
+    url: '/mapView/getTile'
+    visible: true
+  - filename:
+    - '/System/Volumes/Data/ossim/psm-test/5V090205P0001912264B220000100282M_001508507.ntf'
+    title: 'Pan'
+    url: '/mapView/getTile'
+    visible: false
+  - filename:
+    - '/System/Volumes/Data/ossim/psm-test/5V090205P0001912264B220000100282M_001508507.ntf'
+    - '/System/Volumes/Data/ossim/psm-test/5V090205M0001912264B220000100072M_001508507.ntf'
+    title: 'PSM'
+    url: '/psmView/getPsmTile'
+    visible: false
+
+2cmv-view-params:
+  bbox:
+    minY: -6.77636414675709
+    minX: -43.5749875896357
+    maxY: -6.78468298200278
+    maxX: -43.594024376172
+  overlays:
+  - filename:
+    - '/System/Volumes/Data/ossim/2cmv-test/20200618_130630_ssc3d2_0008_basic_panchromatic_dn_file_format.ntf'
+    title: 'Image 1'
+    url: '/mapView/getTile'
+    visible: true
+  - filename:
+    - '/System/Volumes/Data/ossim/2cmv-test/20201111_175126_ssc14d2_0011_basic_panchromatic_dn_file_format.ntf'
+    title: 'Image 2'
+    url: '/mapView/getTile'
+    visible: false
+  - filename:
+    - '/System/Volumes/Data/ossim/2cmv-test/20200618_130630_ssc3d2_0008_basic_panchromatic_dn_file_format.ntf'
+    - '/System/Volumes/Data/ossim/2cmv-test/20201111_175126_ssc14d2_0011_basic_panchromatic_dn_file_format.ntf'
+    title: '2CMV'
+    url: '/twoCMV/get2CMVTile'
+    visible: false
+
+  # bbox:
+  #     minY: 48.8208330630912
+  #     minX: 2.22276815344764
+  #     maxY: 48.9306217992998
+  #     maxX: 2.41349635027604
+  #   overlays:
+  #   - filename:
+  #     - '/System/Volumes/Data/ossim/2cmv-test/16MAY02111606-P1BS-055998375010_01_P013.tiff'
+  #     - '/System/Volumes/Data/ossim/2cmv-test/16MAY02111607-P1BS-055998375010_01_P014.tiff'
+  #     title: '2CMV'
+  #     url: '/twoCMV/get2CMVTile'
+  #     visible: false
+  #   - filename:
+  #     - '/System/Volumes/Data/ossim/2cmv-test/16MAY02111606-P1BS-055998375010_01_P013.tiff'
+  #     title: 'Image 2'
+  #     url: '/mapView/getTile'
+  #     visible: false
+  #   - filename:
+  #     - '/System/Volumes/Data/ossim/2cmv-test/16MAY02111607-P1BS-055998375010_01_P014.tiff'
+  #     title: 'Image 1'
+  #     url: '/mapView/getTile'
+  #     visible: true
+
