not using local from image

--- a/build.gradle
+++ b/build.gradle
@@ -148,7 +148,7 @@ assets {
 
 jib {
   from {
-    image = 'docker://nexus-docker-public-hosted.ossim.io/ossim-runtime-alpine:mando'
+    image = 'nexus-docker-public-hosted.ossim.io/ossim-runtime-alpine:mando'
   }
   to {
     image = 'nexus-docker-public-hosted.ossim.io/ossim-demo'
