--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -152,18 +152,18 @@ psm-view-params:
     maxY: -42.7825465458196
   overlays:
   - filename:
-    - ./ossim-demo-data/psm-test/5V090205M0001912264B220000100072M_001508507.ntf
+    - /ossim-demo-data/psm-test/5V090205M0001912264B220000100072M_001508507.ntf
     title: 'Color'
     url: '/mapView/getTile'
     visible: true
   - filename:
-    - ./ossim-demo-data/psm-test/5V090205P0001912264B220000100282M_001508507.ntf
+    - /ossim-demo-data/psm-test/5V090205P0001912264B220000100282M_001508507.ntf
     title: 'Pan'
     url: '/mapView/getTile'
     visible: false
   - filename:
-    - ./ossim-demo-data/psm-test/5V090205P0001912264B220000100282M_001508507.ntf
-    - ./ossim-demo-data/psm-test/5V090205M0001912264B220000100072M_001508507.ntf
+    - /ossim-demo-data/psm-test/5V090205P0001912264B220000100282M_001508507.ntf
+    - /ossim-demo-data/psm-test/5V090205M0001912264B220000100072M_001508507.ntf
     title: 'PSM'
     url: '/psmView/getPsmTile'
     visible: false
@@ -176,18 +176,18 @@ psm-view-params:
     maxX: -43.594024376172
   overlays:
   - filename:
-    - ./ossim-demo-data/2cmv-test/20200618_130630_ssc3d2_0008_basic_panchromatic_dn_file_format.ntf
+    - /ossim-demo-data/2cmv-test/20200618_130630_ssc3d2_0008_basic_panchromatic_dn_file_format.ntf
     title: 'Image 1'
     url: '/mapView/getTile'
     visible: true
   - filename:
-    - ./ossim-demo-data/2cmv-test/20201111_175126_ssc14d2_0011_basic_panchromatic_dn_file_format.ntf
+    - /ossim-demo-data/2cmv-test/20201111_175126_ssc14d2_0011_basic_panchromatic_dn_file_format.ntf
     title: 'Image 2'
     url: '/mapView/getTile'
     visible: false
   - filename:
-    - ./ossim-demo-data/2cmv-test/20200618_130630_ssc3d2_0008_basic_panchromatic_dn_file_format.ntf
-    - ./ossim-demo-data/2cmv-test/20201111_175126_ssc14d2_0011_basic_panchromatic_dn_file_format.ntf
+    - /ossim-demo-data/2cmv-test/20200618_130630_ssc3d2_0008_basic_panchromatic_dn_file_format.ntf
+    - /ossim-demo-data/2cmv-test/20201111_175126_ssc14d2_0011_basic_panchromatic_dn_file_format.ntf
     title: '2CMV'
     url: '/twoCMV/get2CMVTile'
     visible: false
